test/cases/errors/loader-error-warning/warning-loader.js
/** @type {import("../../../../").LoaderDefinition<string>} */
module.exports = function (source) {
	this.emitWarning(this.query.slice(1));
	return source;
};
